--- a/Wide2Pivot_cleaner2.ipynb
+++ b/Wide2Pivot_cleaner2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "de3dac2b",
+   "id": "5b09ff5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "11964f78",
+   "id": "937a286d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "cb39965d",
+   "id": "757d8e67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,8 +35,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "62707d03",
+   "execution_count": 14,
+   "id": "4e852437",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,8 +47,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "596b5eea",
+   "execution_count": 11,
+   "id": "62066529",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,8 +57,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "cb7fddd4",
+   "execution_count": 15,
+   "id": "8b2b8dc3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,8 +83,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "3c6ef347",
+   "execution_count": 16,
+   "id": "2191dc4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,8 +93,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "01f5e494",
+   "execution_count": 17,
+   "id": "f558c948",
    "metadata": {},
    "outputs": [
     {
@@ -140,39 +140,39 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Female</td>\n",
-       "      <td>Asthma</td>\n",
-       "      <td>2008-08-25</td>\n",
-       "      <td>Allergies</td>\n",
-       "      <td>2014-10-08</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaT</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Anemia</td>\n",
+       "      <td>2000-02-18</td>\n",
+       "      <td>Obesity</td>\n",
+       "      <td>2017-06-20</td>\n",
+       "      <td>Anemia</td>\n",
+       "      <td>2007-01-15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Female</td>\n",
-       "      <td>Obesity</td>\n",
-       "      <td>2005-06-03</td>\n",
-       "      <td>Anemia</td>\n",
-       "      <td>2009-01-28</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Asthma</td>\n",
+       "      <td>2008-05-11</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Female</td>\n",
-       "      <td>Obesity</td>\n",
-       "      <td>2010-12-10</td>\n",
-       "      <td>Obesity</td>\n",
-       "      <td>2017-07-07</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Allergies</td>\n",
+       "      <td>2006-01-27</td>\n",
+       "      <td>Migraine</td>\n",
+       "      <td>2005-08-17</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Male</td>\n",
-       "      <td>Anemia</td>\n",
-       "      <td>2012-02-09</td>\n",
+       "      <td>Migraine</td>\n",
+       "      <td>2010-03-02</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaT</td>\n",
        "      <td>NaN</td>\n",
@@ -180,13 +180,13 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>Female</td>\n",
-       "      <td>Hypertension</td>\n",
-       "      <td>2022-09-10</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaT</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Migraine</td>\n",
+       "      <td>2016-10-03</td>\n",
+       "      <td>Obesity</td>\n",
+       "      <td>2021-03-21</td>\n",
+       "      <td>Migraine</td>\n",
+       "      <td>2006-02-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -201,50 +201,50 @@
        "    <tr>\n",
        "      <th>996</th>\n",
        "      <td>Male</td>\n",
+       "      <td>Migraine</td>\n",
+       "      <td>2008-08-23</td>\n",
        "      <td>Hypertension</td>\n",
-       "      <td>2001-08-24</td>\n",
-       "      <td>Diabetes</td>\n",
-       "      <td>2016-01-04</td>\n",
+       "      <td>2006-01-05</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>997</th>\n",
        "      <td>Male</td>\n",
-       "      <td>Allergies</td>\n",
-       "      <td>2018-01-02</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaT</td>\n",
+       "      <td>Arthritis</td>\n",
+       "      <td>2013-02-03</td>\n",
+       "      <td>Obesity</td>\n",
+       "      <td>2016-03-07</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>998</th>\n",
        "      <td>Male</td>\n",
-       "      <td>Allergies</td>\n",
-       "      <td>2006-06-16</td>\n",
-       "      <td>Migraine</td>\n",
-       "      <td>2015-01-22</td>\n",
+       "      <td>Depression</td>\n",
+       "      <td>2007-01-25</td>\n",
+       "      <td>Asthma</td>\n",
+       "      <td>2015-09-02</td>\n",
        "      <td>Hypertension</td>\n",
-       "      <td>2006-04-08</td>\n",
+       "      <td>2001-08-12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>999</th>\n",
-       "      <td>Female</td>\n",
-       "      <td>Obesity</td>\n",
-       "      <td>2011-12-23</td>\n",
-       "      <td>Osteoporosis</td>\n",
-       "      <td>2005-02-24</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaT</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Depression</td>\n",
+       "      <td>2007-06-12</td>\n",
+       "      <td>Diabetes</td>\n",
+       "      <td>2018-12-12</td>\n",
+       "      <td>Hypertension</td>\n",
+       "      <td>2008-08-10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1000</th>\n",
        "      <td>Female</td>\n",
-       "      <td>Depression</td>\n",
-       "      <td>2018-03-08</td>\n",
-       "      <td>Asthma</td>\n",
-       "      <td>2001-09-04</td>\n",
+       "      <td>Hypertension</td>\n",
+       "      <td>2002-08-09</td>\n",
+       "      <td>Migraine</td>\n",
+       "      <td>2005-04-27</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaT</td>\n",
        "    </tr>\n",
@@ -256,36 +256,36 @@
       "text/plain": [
        "            Gender   Condition_1 Diagnosis_Date_1   Condition_2  \\\n",
        "Patient_ID                                                        \n",
-       "1           Female        Asthma       2008-08-25     Allergies   \n",
-       "2           Female       Obesity       2005-06-03        Anemia   \n",
-       "3           Female       Obesity       2010-12-10       Obesity   \n",
-       "4             Male        Anemia       2012-02-09           NaN   \n",
-       "5           Female  Hypertension       2022-09-10           NaN   \n",
+       "1             Male        Anemia       2000-02-18       Obesity   \n",
+       "2             Male        Asthma       2008-05-11           NaN   \n",
+       "3             Male     Allergies       2006-01-27      Migraine   \n",
+       "4             Male      Migraine       2010-03-02           NaN   \n",
+       "5             Male      Migraine       2016-10-03       Obesity   \n",
        "...            ...           ...              ...           ...   \n",
-       "996           Male  Hypertension       2001-08-24      Diabetes   \n",
-       "997           Male     Allergies       2018-01-02           NaN   \n",
-       "998           Male     Allergies       2006-06-16      Migraine   \n",
-       "999         Female       Obesity       2011-12-23  Osteoporosis   \n",
-       "1000        Female    Depression       2018-03-08        Asthma   \n",
+       "996           Male      Migraine       2008-08-23  Hypertension   \n",
+       "997           Male     Arthritis       2013-02-03       Obesity   \n",
+       "998           Male    Depression       2007-01-25        Asthma   \n",
+       "999           Male    Depression       2007-06-12      Diabetes   \n",
+       "1000        Female  Hypertension       2002-08-09      Migraine   \n",
        "\n",
        "           Diagnosis_Date_2   Condition_3 Diagnosis_Date_3  \n",
        "Patient_ID                                                  \n",
-       "1                2014-10-08           NaN              NaT  \n",
-       "2                2009-01-28           NaN              NaT  \n",
-       "3                2017-07-07           NaN              NaT  \n",
+       "1                2017-06-20        Anemia       2007-01-15  \n",
+       "2                       NaT           NaN              NaT  \n",
+       "3                2005-08-17           NaN              NaT  \n",
        "4                       NaT           NaN              NaT  \n",
-       "5                       NaT           NaN              NaT  \n",
+       "5                2021-03-21      Migraine       2006-02-01  \n",
        "...                     ...           ...              ...  \n",
-       "996              2016-01-04           NaN              NaT  \n",
-       "997                     NaT           NaN              NaT  \n",
-       "998              2015-01-22  Hypertension       2006-04-08  \n",
-       "999              2005-02-24           NaN              NaT  \n",
-       "1000             2001-09-04           NaN              NaT  \n",
+       "996              2006-01-05           NaN              NaT  \n",
+       "997              2016-03-07           NaN              NaT  \n",
+       "998              2015-09-02  Hypertension       2001-08-12  \n",
+       "999              2018-12-12  Hypertension       2008-08-10  \n",
+       "1000             2005-04-27           NaN              NaT  \n",
        "\n",
        "[1000 rows x 7 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,17 +298,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd8a4ef0",
+   "id": "44f27b74",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Part II: Pivot and clean"
+    "#Part II: clean and pivot.\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.7.7 ('PythonData2')",
    "language": "python",
    "name": "python3"
   },
@@ -323,6 +323,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "f850961cf86af6bfbfea148a42afa87a6dcae71f5d27e6de0e5d99efe6284e3a"
+   }
   }
  },
  "nbformat": 4,
