--- a/Wide2Pivot_cleaner2.ipynb
+++ b/Wide2Pivot_cleaner2.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "5b09ff5f",
+   "execution_count": 47,
+   "id": "ed6a8745",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,8 +15,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "937a286d",
+   "execution_count": 48,
+   "id": "44208916",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,8 +25,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "757d8e67",
+   "execution_count": 49,
+   "id": "63dffac6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,20 +35,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "4e852437",
+   "execution_count": 50,
+   "id": "cea654c8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#PART I: Synthetic data creation\n",
-    "data = {'Patient_ID': [], 'Gender': [], 'Condition_1': [], 'Diagnosis_Date_1': [],\n",
+    "#PART I: SYNTHETIC DATA CREATION\n",
+    "data = {'Patient_ID': [], 'Sex': [], 'Condition_1': [], 'Diagnosis_Date_1': [],\n",
     "        'Condition_2': [], 'Diagnosis_Date_2': [], 'Condition_3': [], 'Diagnosis_Date_3': []}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "62066529",
+   "execution_count": 51,
+   "id": "14be5f79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,15 +57,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "8b2b8dc3",
+   "execution_count": 52,
+   "id": "8b06dc20",
    "metadata": {},
    "outputs": [],
    "source": [
     "for patient_id in range(1, num_patients + 1):\n",
     "    # Add patient ID and gender\n",
     "    data['Patient_ID'].append(patient_id)\n",
-    "    data['Gender'].append(np.random.choice(['Male', 'Female']))\n",
+    "    data['Sex'].append(np.random.choice(['Male', 'Female']))\n",
     "\n",
     "    # This generates a random number of medical conditions (at least one)\n",
     "    num_conditions = np.random.randint(1, 4)\n",
@@ -83,8 +83,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "2191dc4c",
+   "execution_count": 53,
+   "id": "753924c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,8 +93,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "f558c948",
+   "execution_count": 54,
+   "id": "cfa2269c",
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Gender</th>\n",
+       "      <th>Patient_ID</th>\n",
+       "      <th>Sex</th>\n",
        "      <th>Condition_1</th>\n",
        "      <th>Diagnosis_Date_1</th>\n",
        "      <th>Condition_2</th>\n",
@@ -126,67 +127,62 @@
        "      <th>Condition_3</th>\n",
        "      <th>Diagnosis_Date_3</th>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Patient_ID</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
        "      <td>Male</td>\n",
-       "      <td>Anemia</td>\n",
-       "      <td>2000-02-18</td>\n",
+       "      <td>Arthritis</td>\n",
+       "      <td>2014-11-08</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Male</td>\n",
        "      <td>Obesity</td>\n",
-       "      <td>2017-06-20</td>\n",
-       "      <td>Anemia</td>\n",
-       "      <td>2007-01-15</td>\n",
+       "      <td>2018-07-11</td>\n",
+       "      <td>Allergies</td>\n",
+       "      <td>2010-08-21</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Male</td>\n",
-       "      <td>Asthma</td>\n",
-       "      <td>2008-05-11</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaT</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Anemia</td>\n",
+       "      <td>2021-05-02</td>\n",
+       "      <td>Depression</td>\n",
+       "      <td>2011-06-02</td>\n",
+       "      <td>Osteoporosis</td>\n",
+       "      <td>2020-01-12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>4</td>\n",
        "      <td>Male</td>\n",
-       "      <td>Allergies</td>\n",
-       "      <td>2006-01-27</td>\n",
-       "      <td>Migraine</td>\n",
-       "      <td>2005-08-17</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaT</td>\n",
+       "      <td>Asthma</td>\n",
+       "      <td>2009-12-28</td>\n",
+       "      <td>Arthritis</td>\n",
+       "      <td>2015-03-12</td>\n",
+       "      <td>Asthma</td>\n",
+       "      <td>2022-04-25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>5</td>\n",
        "      <td>Male</td>\n",
-       "      <td>Migraine</td>\n",
-       "      <td>2010-03-02</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Male</td>\n",
-       "      <td>Migraine</td>\n",
-       "      <td>2016-10-03</td>\n",
        "      <td>Obesity</td>\n",
-       "      <td>2021-03-21</td>\n",
-       "      <td>Migraine</td>\n",
-       "      <td>2006-02-01</td>\n",
+       "      <td>2008-07-18</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -197,118 +193,225 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>995</th>\n",
+       "      <td>996</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Asthma</td>\n",
+       "      <td>2013-08-03</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>996</th>\n",
+       "      <td>997</td>\n",
        "      <td>Male</td>\n",
-       "      <td>Migraine</td>\n",
-       "      <td>2008-08-23</td>\n",
-       "      <td>Hypertension</td>\n",
-       "      <td>2006-01-05</td>\n",
+       "      <td>Diabetes</td>\n",
+       "      <td>2002-12-28</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>997</th>\n",
-       "      <td>Male</td>\n",
-       "      <td>Arthritis</td>\n",
-       "      <td>2013-02-03</td>\n",
+       "      <td>998</td>\n",
+       "      <td>Female</td>\n",
        "      <td>Obesity</td>\n",
-       "      <td>2016-03-07</td>\n",
+       "      <td>2020-09-23</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>998</th>\n",
-       "      <td>Male</td>\n",
-       "      <td>Depression</td>\n",
-       "      <td>2007-01-25</td>\n",
-       "      <td>Asthma</td>\n",
-       "      <td>2015-09-02</td>\n",
-       "      <td>Hypertension</td>\n",
-       "      <td>2001-08-12</td>\n",
+       "      <td>999</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Migraine</td>\n",
+       "      <td>2001-10-10</td>\n",
+       "      <td>Migraine</td>\n",
+       "      <td>2010-12-06</td>\n",
+       "      <td>Anemia</td>\n",
+       "      <td>2003-08-12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>999</th>\n",
+       "      <td>1000</td>\n",
        "      <td>Male</td>\n",
        "      <td>Depression</td>\n",
-       "      <td>2007-06-12</td>\n",
-       "      <td>Diabetes</td>\n",
-       "      <td>2018-12-12</td>\n",
-       "      <td>Hypertension</td>\n",
-       "      <td>2008-08-10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1000</th>\n",
-       "      <td>Female</td>\n",
-       "      <td>Hypertension</td>\n",
-       "      <td>2002-08-09</td>\n",
-       "      <td>Migraine</td>\n",
-       "      <td>2005-04-27</td>\n",
+       "      <td>2004-06-01</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaT</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1000 rows × 7 columns</p>\n",
+       "<p>1000 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "            Gender   Condition_1 Diagnosis_Date_1   Condition_2  \\\n",
-       "Patient_ID                                                        \n",
-       "1             Male        Anemia       2000-02-18       Obesity   \n",
-       "2             Male        Asthma       2008-05-11           NaN   \n",
-       "3             Male     Allergies       2006-01-27      Migraine   \n",
-       "4             Male      Migraine       2010-03-02           NaN   \n",
-       "5             Male      Migraine       2016-10-03       Obesity   \n",
-       "...            ...           ...              ...           ...   \n",
-       "996           Male      Migraine       2008-08-23  Hypertension   \n",
-       "997           Male     Arthritis       2013-02-03       Obesity   \n",
-       "998           Male    Depression       2007-01-25        Asthma   \n",
-       "999           Male    Depression       2007-06-12      Diabetes   \n",
-       "1000        Female  Hypertension       2002-08-09      Migraine   \n",
+       "     Patient_ID     Sex Condition_1 Diagnosis_Date_1 Condition_2  \\\n",
+       "0             1    Male   Arthritis       2014-11-08         NaN   \n",
+       "1             2    Male     Obesity       2018-07-11   Allergies   \n",
+       "2             3  Female      Anemia       2021-05-02  Depression   \n",
+       "3             4    Male      Asthma       2009-12-28   Arthritis   \n",
+       "4             5    Male     Obesity       2008-07-18         NaN   \n",
+       "..          ...     ...         ...              ...         ...   \n",
+       "995         996  Female      Asthma       2013-08-03         NaN   \n",
+       "996         997    Male    Diabetes       2002-12-28         NaN   \n",
+       "997         998  Female     Obesity       2020-09-23         NaN   \n",
+       "998         999  Female    Migraine       2001-10-10    Migraine   \n",
+       "999        1000    Male  Depression       2004-06-01         NaN   \n",
        "\n",
-       "           Diagnosis_Date_2   Condition_3 Diagnosis_Date_3  \n",
-       "Patient_ID                                                  \n",
-       "1                2017-06-20        Anemia       2007-01-15  \n",
-       "2                       NaT           NaN              NaT  \n",
-       "3                2005-08-17           NaN              NaT  \n",
-       "4                       NaT           NaN              NaT  \n",
-       "5                2021-03-21      Migraine       2006-02-01  \n",
-       "...                     ...           ...              ...  \n",
-       "996              2006-01-05           NaN              NaT  \n",
-       "997              2016-03-07           NaN              NaT  \n",
-       "998              2015-09-02  Hypertension       2001-08-12  \n",
-       "999              2018-12-12  Hypertension       2008-08-10  \n",
-       "1000             2005-04-27           NaN              NaT  \n",
+       "    Diagnosis_Date_2   Condition_3 Diagnosis_Date_3  \n",
+       "0                NaT           NaN              NaT  \n",
+       "1         2010-08-21           NaN              NaT  \n",
+       "2         2011-06-02  Osteoporosis       2020-01-12  \n",
+       "3         2015-03-12        Asthma       2022-04-25  \n",
+       "4                NaT           NaN              NaT  \n",
+       "..               ...           ...              ...  \n",
+       "995              NaT           NaN              NaT  \n",
+       "996              NaT           NaN              NaT  \n",
+       "997              NaT           NaN              NaT  \n",
+       "998       2010-12-06        Anemia       2003-08-12  \n",
+       "999              NaT           NaN              NaT  \n",
        "\n",
-       "[1000 rows x 7 columns]"
+       "[1000 rows x 8 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "synthetic_health_data.set_index('Patient_ID', inplace=True)\n",
     "synthetic_health_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "44f27b74",
+   "execution_count": 55,
+   "id": "48f21d07",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Part II: clean and pivot.\n"
+    "#Part II: CLEAN AND PIVOT.\n",
+    "synthetic_health_data=synthetic_health_data.rename(columns={'Sex':'Sex_1'})\n",
+    "\n",
+    "#This melts the wide format to long format on the column name, separates them on '_' and stores them as numbers.\n",
+    "melted_df = pd.wide_to_long(synthetic_health_data,\n",
+    "                            stubnames=['Sex', 'Condition', 'Diagnosis_Date'],\n",
+    "                            i='Patient_ID',\n",
+    "                            j='Num',\n",
+    "                            sep='_')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "047ceade",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "melted_df = melted_df.reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "b45145e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#This prevents a condition from being double counted if a patient had it more than once.\n",
+    "melted_df = melted_df.drop_duplicates(subset=['Patient_ID', 'Condition'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "f9e06c8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#This creates the pivot table, with 'Condition' as row, 'Sex' as column.\n",
+    "pivot_table = pd.pivot_table(melted_df,\n",
+    "                             index=['Condition'],\n",
+    "                             columns=['Sex'],\n",
+    "                             aggfunc='size',  # You can use 'count' if you prefer\n",
+    "                             fill_value=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "2efbc875",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#This adds a total column\n",
+    "pivot_table['Total'] = pivot_table.sum(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "e8578adf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#This rearranges from A-Z to total size descending.\n",
+    "pivot_table = pivot_table.sort_values(by='Total', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "4422916d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sex           Female  Male  Total\n",
+      "Condition                        \n",
+      "Diabetes          47    58    105\n",
+      "Anemia            52    51    103\n",
+      "Allergies         47    55    102\n",
+      "Migraine          52    50    102\n",
+      "Osteoporosis      45    57    102\n",
+      "Asthma            53    48    101\n",
+      "Depression        50    49     99\n",
+      "Hypertension      50    48     98\n",
+      "Obesity           45    52     97\n",
+      "Arthritis         48    43     91\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Here is the end product\n",
+    "print(pivot_table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2bbc2ee6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.7 ('PythonData2')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
